# fastapi-socketio-example

./: app.py  pyproject.toml
